# CEAbot

./: .gitignore
Arduino/Main/: Main.ino
power_logs/: drive_power_log.csv
src/CEAbot_phenotyping/: package.xml  setup.cfg  setup.py
src/CEAbot_phenotyping/CEAbot_phenotyping/: plant_row_coordinates.py
src/CEAbot_phenotyping/test/: SAM2_test.py  contour_area_stat.py  crop_selector.py  hsv_sliders.py  plant_location_in_row.py  plant_segmentation_tuner.py  reconstruct_plant_views.py
src/arm_controlling/: package.xml  setup.cfg  setup.py
src/arm_controlling/arm_controlling/: arm_manager.py  joint_rotation_monitor.py  moveit_arm_helper.py  plant_locator.py  plant_view_scanner.py
src/arm_interfaces/: CMakeLists.txt  package.xml
src/arm_interfaces/msg/: PlantTarget.msg  PlantTargetArray.msg
src/arm_interfaces/srv/: CaptureView.srv  ExecutePlannedTrajectory.srv  MoveToPose.srv  PlanToPose.srv
src/bench_robot/: package.xml  setup.cfg  setup.py
src/bench_robot/Config/: bench_tracker.yaml  motor_controller.yaml  robot.yaml  settings.yaml
src/bench_robot/Test/: Aruco_detection.py  camera_test.py  camera_view.py  commands.txt  motor_velocity_control.py  power_log_stats.py  publish_zed_top_scan_folder.py  ros2_controllers.yaml  test_modbus.py  (+2 more)
src/bench_robot_cpp/: CMakeLists.txt  package.xml
src/bench_robot_cpp/src/: arm_controller.cpp
src/bench_robot_description/: CMakeLists.txt  package.xml
src/kinova_6dof_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kinova_7dof_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+95 files in other folders)
